--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "core-js": "^2.4.1",
     "jquery": "^3.2.1",
     "ng-semantic": "^1.1.13",
+    "ng2-smart-table": "^1.2.2",
+    "primeng": "^5.0.0",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
